# JEngine

./: .gitignore  CMakeLists.txt  README.md  game-rules.md  project-requirements.md
.github/: copilot-instructions.md
Bomberman/: EnemyConfig.h  GlyphHelper.h  HighScoreManager.cpp  HighScoreManager.h  Main.cpp
Bomberman/Achievements/: AchievementObserver.cpp  AchievementObserver.h  CSteamAchievements.cpp
Bomberman/Commands/: ChangeHealthCommand.cpp  ChangeHealthCommand.h  ChangeScoreCommand.cpp  ChangeScoreCommand.h  DetonateBombsCommand.cpp  DetonateBombsCommand.h  MoveCommand.cpp  MoveCommand.h  ResetAchievementsCommand.cpp  ResetAchievementsCommand.h  SkipLevelCommand.cpp  SkipLevelCommand.h  SpawnBombCommand.cpp  SpawnBombCommand.h  ToggleMuteCommand.cpp  ToggleMuteCommand.h
Bomberman/Components/: BombCapacityComponent.cpp  BombCapacityComponent.h  BombComponent.cpp  BombComponent.h  BombRangeComponent.cpp  BombRangeComponent.h  CameraComponent.cpp  CameraComponent.h  DeathAnimatorComponent.cpp  DeathAnimatorComponent.h  DetonatorComponent.cpp  DetonatorComponent.h  DisplayComponent.h  EnemyComponent.cpp  EnemyComponent.h  EnemyMovementComponent.cpp  EnemyMovementComponent.h  HealthComponent.cpp  HealthComponent.h  HiddenItemManager.cpp  HudComponent.cpp  HudComponent.h  PickupComponent.cpp  PickupComponent.h  PlayerAnimatorComponent.cpp  PlayerAnimatorComponent.h  PlayfieldComponent.cpp  PlayfieldComponent.h  PlayfieldGrid.cpp  PlayfieldGrid.h  SceneStateMachineComponent.cpp  SceneStateMachineComponent.h  ScoreComponent.cpp  ScoreComponent.h  SkateComponent.cpp  SkateComponent.h  StateMachineComponent.cpp  StateMachineComponent.h  StateStackComponent.cpp  StateStackComponent.h
Bomberman/Config/: GameMode.h
Bomberman/Data/: Game_Over.flac  Title_Screen.flac  levels.json
Bomberman/Data/Audio/BGM/: 02. Stage Start.flac  05. Stage Clear.flac  08. Ending.flac  09. Miss.flac
Bomberman/Factories/: EnemyFactory.cpp  EnemyFactory.h
Bomberman/Level/: LevelData.h  LevelDataLoader.cpp  LevelDataLoader.h  PlayfieldGrid.cpp
Bomberman/Managers/: ExplosionEffectManager.cpp  ExplosionEffectManager.h  HiddenItemManager.cpp  HiddenItemManager.h  HighScoreManager.cpp  HighScoreManager.h
Bomberman/Observers/: BombEventObserver.cpp  BombEventObserver.h  EntityDeathObserver.cpp  EntityDeathObserver.h
Bomberman/Powerups/: DetonatorEffect.cpp  DetonatorEffect.h  ExtraBombEffect.cpp  ExtraBombEffect.h  FlamesEffect.cpp  FlamesEffect.h  PowerupEffect.h  SkateEffect.cpp  SkateEffect.h
Bomberman/Scenes/: GameplaySceneBuilder.cpp  GameplaySceneBuilder.h  ModeSetup.cpp  ModeSetup.h  PlayerSetup.cpp  PlayerSetup.h
Bomberman/State/: BalloomIdleState.cpp  BalloomIdleState.h  EndSceneState.cpp  EndSceneState.h  EnemyIdleState.cpp  EnemyIdleState.h  EnemyState.h  GameSceneState.cpp  GameSceneState.h  SceneState.h  TitleSceneState.cpp  TitleSceneState.h  TransitionSceneState.cpp  TransitionSceneState.h
Minigin/: BaseComponent.cpp  BaseComponent.h  BombEventObserver.cpp  BombEventObserver.h  CacheExerciseComponent.cpp  CacheExerciseComponent.h  ChangeHealthCommand.cpp  ChangeHealthCommand.h  Command.h  ControllerButtons.h  ControllerInput.cpp  ControllerInput.h  ExampleCommand.h  FPSComponent.cpp  FPSComponent.h  GameObject.cpp  GameObject.h  HealthComponent.cpp  HealthComponent.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  MoveCommand.cpp  MoveCommand.h  MoveComponent.cpp  MoveComponent.h  PlayerAnimatorComponent.cpp  RenderComponent.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SpriteAnimatorComponent.cpp  SpriteAnimatorComponent.h  TextComponent.cpp  (+5 more)
Minigin/Achievements/: AchievementObserver.cpp  AchievementObserver.h  CSteamAchievements.cpp  CSteamAchievements.h
Minigin/Audio/: AudioEventObserver.cpp  AudioEventObserver.h  ISoundService.h  NullSoundService.h  ServiceLocator.cpp  ServiceLocator.h  SoundServiceSdlMixer.cpp  SoundServiceSdlMixer.h
Minigin/Commands/: ChangeHealthCommand.cpp  ChangeHealthCommand.h  ChangeScoreCommand.cpp  ChangeScoreCommand.h  Command.h  EventCommand.cpp  EventCommand.h  ResetAchievementsCommand.cpp  ResetAchievementsCommand.h  SpawnBombCommand.cpp  SpawnBombCommand.h
Minigin/Components/: BaseComponent.h  CacheExerciseComponent.cpp  CollisionComponent.cpp  CollisionComponent.h  CollisionGrid.cpp  CollisionGrid.h  DelayedEventComponent.cpp  DelayedEventComponent.h  DisplayComponent.h  FPSComponent.cpp  FPSComponent.h  HealthComponent.cpp  HealthComponent.h  LivesDisplayComponent.cpp  LivesDisplayComponent.h  PickupComponent.cpp  PlayerAnimatorComponent.h  RectBounds.h  RenderComponent.cpp  RenderComponent.h  RotateComponent.cpp  RotateComponent.h  ScoreComponent.cpp  ScoreComponent.h  ScoreDisplayComponent.cpp  ScoreDisplayComponent.h  SpriteAnimatorComponent.cpp  SpriteAnimatorComponent.h  TextComponent.cpp  TextComponent.h  TransformComponent.cpp  TransformComponent.h
Minigin/Core/: GameTime.h  Minigin.cpp  Minigin.h  Singleton.h
Minigin/EventQueue/: Event.h  EventManager.h  IObserver.h  ISubject.h  Observer.h  PlayerObserver.cpp  PlayerObserver.h  Subject.cpp  Subject.h
Minigin/Input/: ControllerButtons.h  ControllerInput.cpp  ControllerInput.h  InputManager.cpp  InputManager.h  KeyCodes.h  KeyboardInput.cpp  KeyboardInput.h
Minigin/Rendering/: Renderer.cpp  Renderer.h  Texture2D.cpp  Texture2D.h
Minigin/Resources/: Font.cpp  Font.h  ResourceManager.cpp  ResourceManager.h
Minigin/Scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Minigin/State/: State.h  StateMachine.cpp  StateMachine.h  StateStack.cpp  StateStack.h
web/: index.html
